# email-openenv

./: .gitignore  BENCHMARK.md  BLOG.md  BLOG_VIDEO_SCRIPT_2MIN.md  Dockerfile  HACKATHON_WINNING_CHECKLIST.md  PROJECT_REPORT_NON_TECH.md  README.md  app.py  comparison_results.txt  compose.debug.yaml  compose.yaml  demo_output.txt  inference.py  main.py  openenv.yaml  pyproject.toml  random_agent.py  requirements.txt
baseline/: run_baseline.py
env/: email_env.py  grader.py  models.py  tasks.py
my_env_v4/: env.py  grader.py  models.py  tasks.py
outputs/: benchmark_report.json  reward_summary.json
server/: app.py
training/: COLAB_QUICKSTART.md  benchmark_suite.py  evaluate_rewards.py  generate_plots.py  judge_summary.md  minimal_trl_colab.py  multiseed_benchmark.json  multiseed_benchmark.py  requirements.txt  reward_improvement.json  train_metrics.json
