[project]
name = "email-openenv"
version = "0.1.0"
description = "Email triage environment using OpenEnv"
authors = [{ name="Rohit Singhal" }]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "openai"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"