[project]
name = "email-openenv"
version = "0.1.0"
description = "Email triage environment"
authors = [{ name="Rohit Singhal" }]

dependencies = [
    "openenv-core>=0.2.0",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "requests"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"