[project]
name = "email-openenv"
version = "0.1.0"
description = "Email triage environment"
authors = [{ name="Rohit Singhal" }]

dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "openai>=1.0.0",
    "requests>=2.31.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
readme = "README.md"
requires-python = ">=3.10"